src/snapshots/todoro__ui__tests__completed_items_below_a_header.snap
---
source: src/ui.rs
expression: render(&app).backend()
---
"╭───────────── Monday, October 5 2026 (today) ─────────────╮"
"│1. Buy milk                                               │"
"│2. Book dentist                                           │"
"│── Completed (2) ─────────────────────────────────────────│"
"│✓  Call mom                                               │"
"│✓  Write report ≡                                         │"
"│                                                          │"
"│                                                          │"
"╰──── h ← prev day · k ↑ up · j ↓ down · next day → l ─────╯"
" NORMAL   a add  e edit  x done  d delete  ↵ notes  ? help  "
