src/snapshots/todoro__ui__tests__delete_popup.snap
---
source: src/ui.rs
expression: render(&app).backend()
---
"╭───────────── Monday, October 5 2026 (today) ─────────────╮"
"│1. Buy milk                                               │"
"│2. Write report                                           │"
"│    ╭ Delete item? ──────────────────────────────────╮    │"
"│    │2. Write report                                 │    │"
"│    │                                                │    │"
"│    │               d delete   c cancel              │    │"
"│    ╰────────────────────────────────────────────────╯    │"
"╰──── h ← prev day · k ↑ up · j ↓ down · next day → l ─────╯"
" DELETE   d confirm  c cancel                               "
