src/snapshots/todoro__ui__tests__editing_a_completed_item.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭───────────── Monday, October 5 2026 (today) ─────────────╮"
"│1. Call mom                                               │"
"│── Completed (1) ─────────────────────────────────────────│"
"│✓  Buy milk                                               │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──── h ← prev day · k ↑ up · j ↓ down · next day → l ─────╯"
" INSERT   ←/→ move  enter/esc save  (empty asks to delete)  "
